--- a/manifests/base/code-server-notebook-imagestream.yaml
+++ b/manifests/base/code-server-notebook-imagestream.yaml
@@ -6,7 +6,7 @@ metadata:
     opendatahub.io/notebook-image: "true"
   annotations:
     opendatahub.io/notebook-image-url: "https://github.com/opendatahub-io/notebooks/tree/main/codeserver"
-    opendatahub.io/notebook-image-name: "Code Server | Data Science | CPU | Python 3.11"
+    opendatahub.io/notebook-image-name: "Code Server | Data Science | CPU | Python 3.12"
     opendatahub.io/notebook-image-desc: "code-server workbench allows users to code, build, and collaborate on projects directly from web."
     opendatahub.io/notebook-image-order: "18"
   name: code-server-notebook
@@ -15,6 +15,37 @@ spec:
     local: true
   tags:
     # N Version of the image
+    - annotations:
+        # language=json
+        opendatahub.io/notebook-software: |
+          [
+            {"name": "code-server", "version": "4.98"},
+            {"name": "Python", "version": "v3.12"}
+          ]
+        # language=json
+        opendatahub.io/notebook-python-dependencies: |
+          [
+            {"name": "Boto3", "version": "1.37"},
+            {"name": "Kafka-Python-ng", "version": "2.2"},
+            {"name": "Matplotlib", "version": "3.10"},
+            {"name": "Numpy", "version": "2.2"},
+            {"name": "Pandas", "version": "2.2"},
+            {"name": "Scikit-learn", "version": "1.6"},
+            {"name": "Scipy", "version": "1.15"},
+            {"name": "Sklearn-onnx", "version": "1.18"},
+            {"name": "ipykernel", "version": "6.29"},
+            {"name": "Kubeflow-Training", "version": "1.9"}
+          ]
+        openshift.io/imported-from: quay.io/opendatahub/workbench-images
+        opendatahub.io/workbench-image-recommended: 'true'
+        opendatahub.io/notebook-build-commit: odh-workbench-codeserver-datascience-cpu-py312-ubi9-commit-n_PLACEHOLDER
+      from:
+        kind: DockerImage
+        name: odh-workbench-codeserver-datascience-cpu-py312-ubi9-n_PLACEHOLDER
+      name: "2025.2"
+      referencePolicy:
+        type: Source
+    # N - 1 Version of the image
     - annotations:
         # language=json
         opendatahub.io/notebook-software: |
@@ -37,42 +68,11 @@ spec:
             {"name": "Kubeflow-Training", "version": "1.9"}
           ]
         openshift.io/imported-from: quay.io/opendatahub/workbench-images
-        opendatahub.io/workbench-image-recommended: 'true'
-        opendatahub.io/notebook-build-commit: odh-workbench-codeserver-datascience-cpu-py311-ubi9-commit-n_PLACEHOLDER
-      from:
-        kind: DockerImage
-        name: odh-workbench-codeserver-datascience-cpu-py311-ubi9-n_PLACEHOLDER
-      name: "2025.1"
-      referencePolicy:
-        type: Source
-    # N - 1 Version of the image
-    - annotations:
-        # language=json
-        opendatahub.io/notebook-software: |
-          [
-            {"name": "code-server", "version": "4.92"},
-            {"name": "Python", "version": "v3.11"}
-          ]
-        # language=json
-        opendatahub.io/notebook-python-dependencies: |
-          [
-            {"name": "Boto3", "version": "1.34"},
-            {"name": "Kafka-Python", "version": "2.0"},
-            {"name": "Matplotlib", "version": "3.8"},
-            {"name": "Numpy", "version": "1.26"},
-            {"name": "Pandas", "version": "2.2"},
-            {"name": "Scikit-learn", "version": "1.4"},
-            {"name": "Scipy", "version": "1.12"},
-            {"name": "Sklearn-onnx", "version": "1.16"},
-            {"name": "ipykernel", "version": "6.29"},
-            {"name": "Kubeflow-Training", "version": "1.8"}
-          ]
-        openshift.io/imported-from: quay.io/opendatahub/workbench-images
         opendatahub.io/workbench-image-recommended: 'false'
         opendatahub.io/notebook-build-commit: odh-workbench-codeserver-datascience-cpu-py311-ubi9-commit-n-1_PLACEHOLDER
       from:
         kind: DockerImage
         name: odh-workbench-codeserver-datascience-cpu-py311-ubi9-n-1_PLACEHOLDER
-      name: "2024.2"
+      name: "2025.1"
       referencePolicy:
         type: Source
