--- a/manifests/base/jupyter-minimal-notebook-imagestream.yaml
+++ b/manifests/base/jupyter-minimal-notebook-imagestream.yaml
@@ -6,7 +6,7 @@ metadata:
     opendatahub.io/notebook-image: "true"
   annotations:
     opendatahub.io/notebook-image-url: "https://github.com/opendatahub-io/notebooks/tree/main/jupyter/minimal"
-    opendatahub.io/notebook-image-name: "Jupyter | Minimal | CPU | Python 3.11"
+    opendatahub.io/notebook-image-name: "Jupyter | Minimal | CPU | Python 3.12"
     opendatahub.io/notebook-image-desc: "Jupyter notebook image with minimal dependency set to start experimenting with Jupyter environment."
     opendatahub.io/notebook-image-order: "1"
   name: jupyter-minimal-notebook
@@ -19,7 +19,7 @@ spec:
         # language=json
         opendatahub.io/notebook-software: |
           [
-            {"name": "Python", "version": "v3.11"}
+            {"name": "Python", "version": "v3.12"}
           ]
         # language=json
         opendatahub.io/notebook-python-dependencies: |
@@ -29,11 +29,11 @@ spec:
         openshift.io/imported-from: quay.io/opendatahub/workbench-images
         opendatahub.io/workbench-image-recommended: 'true'
         opendatahub.io/default-image: "true"
-        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-minimal-cpu-py311-ubi9-commit-n_PLACEHOLDER
+        opendatahub.io/notebook-build-commit: odh-workbench-jupyter-minimal-cpu-py312-ubi9-commit-n_PLACEHOLDER
       from:
         kind: DockerImage
-        name: odh-workbench-jupyter-minimal-cpu-py311-ubi9-n_PLACEHOLDER
-      name: "2025.1"
+        name: odh-workbench-jupyter-minimal-cpu-py312-ubi9-n_PLACEHOLDER
+      name: "2025.2"
       referencePolicy:
         type: Source
     # N - 1 Version of the image
@@ -46,15 +46,15 @@ spec:
         # language=json
         opendatahub.io/notebook-python-dependencies: |
           [
-            {"name": "JupyterLab","version": "4.2"}
+            {"name": "JupyterLab","version": "4.4"}
           ]
         openshift.io/imported-from: quay.io/opendatahub/workbench-images
         opendatahub.io/workbench-image-recommended: 'false'
-        opendatahub.io/default-image: "true"
+        opendatahub.io/default-image: "false"
         opendatahub.io/notebook-build-commit: odh-workbench-jupyter-minimal-cpu-py311-ubi9-commit-n-1_PLACEHOLDER
       from:
         kind: DockerImage
         name: odh-workbench-jupyter-minimal-cpu-py311-ubi9-n-1_PLACEHOLDER
-      name: "2024.2"
+      name: "2025.1"
       referencePolicy:
         type: Source
