--- a/.tekton/odh-workbench-rstudio-minimal-cpu-py311-c9s-pull-request.yaml
+++ b/.tekton/odh-workbench-rstudio-minimal-cpu-py311-c9s-pull-request.yaml
@@ -13,7 +13,7 @@ metadata:
     pipelinesascode.tekton.dev/max-keep-runs: '3'
     pipelinesascode.tekton.dev/on-comment: ^/kfbuild\s+(all|odh\-workbench\-rstudio\-minimal\-cpu\-py311\-c9s|rstudio/c9s\-python\-3\.11)
     pipelinesascode.tekton.dev/on-cel-expression: |
-      event == "pull_request" && target_branch == "main" && !("manifests/base/params-latest.env".pathChanged()) && ( ".tekton/odh-workbench-rstudio-minimal-cpu-py311-c9s-pull-request.yaml".pathChanged() || "rstudio/c9s-python-3.11/**".pathChanged() || || "rstudio/c9s-python-3.11/build-args/cpu.conf".pathChanged() )
+      event == "pull_request" && target_branch == "main" && !("manifests/base/params-latest.env".pathChanged()) && ( ".tekton/odh-workbench-rstudio-minimal-cpu-py311-c9s-pull-request.yaml".pathChanged() || "rstudio/c9s-python-3.11/**".pathChanged() || "rstudio/c9s-python-3.11/build-args/cpu.conf".pathChanged() )
       && body.repository.full_name == "opendatahub-io/notebooks"
   labels:
     appstudio.openshift.io/application: opendatahub-release
