--- a/.tekton/odh-workbench-rstudio-minimal-cpu-py311-c9s-push.yaml
+++ b/.tekton/odh-workbench-rstudio-minimal-cpu-py311-c9s-push.yaml
@@ -9,7 +9,7 @@ metadata:
     pipelinesascode.tekton.dev/cancel-in-progress: "false"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     build.appstudio.openshift.io/build-nudge-files: "manifests/base/params-latest.env"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "main" && !("manifests/base/params-latest.env".pathChanged()) && ( ".tekton/odh-workbench-rstudio-minimal-cpu-py311-c9s-push.yaml".pathChanged() || "rstudio/c9s-python-3.11/**".pathChanged() || || "rstudio/c9s-python-3.11/build-args/cpu.conf".pathChanged() )
+    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "main" && !("manifests/base/params-latest.env".pathChanged()) && ( ".tekton/odh-workbench-rstudio-minimal-cpu-py311-c9s-push.yaml".pathChanged() || "rstudio/c9s-python-3.11/**".pathChanged() || "rstudio/c9s-python-3.11/build-args/cpu.conf".pathChanged() )
   creationTimestamp:
   labels:
     appstudio.openshift.io/application: opendatahub-release
