--- a/.tekton/multiarch-push-pipeline.yaml
+++ b/.tekton/multiarch-push-pipeline.yaml
@@ -241,7 +241,7 @@ spec:
       - name: PLATFORM
         value:
         - $(params.build-platforms)
-  - name: build-container
+    name: build-images
     params:
     - name: IMAGE
       value: $(params.output-image)
@@ -268,14 +268,16 @@ spec:
       value: $(tasks.prefetch-dependencies.results.SOURCE_ARTIFACT)
     - name: CACHI2_ARTIFACT
       value: $(tasks.prefetch-dependencies.results.CACHI2_ARTIFACT)
+    - name: IMAGE_APPEND_PLATFORM
+      value: "true"
     runAfter:
     - prefetch-dependencies
     taskRef:
       params:
       - name: name
-        value: buildah-oci-ta
+        value: buildah-remote-oci-ta
       - name: bundle
-        value: quay.io/konflux-ci/tekton-catalog/task-buildah-oci-ta:0.4@sha256:f91db5817f403628dbd268fea69503ba910443ef8d71c86f093776f45f57adb9
+        value: quay.io/konflux-ci/tekton-catalog/task-buildah-remote-oci-ta:0.4@sha256:fa90f4a5ac8485720999aabb00a1db4bb5da69b178acbc089870efc7eaf36721
       - name: kind
         value: task
       resolver: bundles
