update konflux conf

--- a/.tekton/odh-pipeline-runtime-datascience-cpu-py312-ubi9-pull-request.yaml
+++ b/.tekton/odh-pipeline-runtime-datascience-cpu-py312-ubi9-pull-request.yaml
@@ -36,6 +36,7 @@ spec:
   - name: build-platforms
     value:
     - linux/x86_64
+    - linux/s390x
   - name: dockerfile
     value: runtimes/datascience/ubi9-python-3.12/Dockerfile.cpu
   - name: path-context
