NO-JIRA: fix(gha): add concurrency group to GitHub Actions workflows for PR builds
fixes omission from
* https://github.com/opendatahub-io/notebooks/pull/2367

without this, the -aipcc group was canceling the base pr group and vice versa

--- a/.github/workflows/build-notebooks-pr-aipcc.yaml
+++ b/.github/workflows/build-notebooks-pr-aipcc.yaml
@@ -18,7 +18,7 @@ permissions:
   packages: read
 
 concurrency:
-  group: ${{ format('build-notebooks-pr-{0}', github.event.pull_request.number) }}
+  group: ${{ format('build-notebooks-pr-apicc-{0}', github.event.pull_request.number) }}
   cancel-in-progress: true
 
 env:
