--- a/runtimes/rocm-tensorflow/ubi9-python-3.12/pyproject.toml
+++ b/runtimes/rocm-tensorflow/ubi9-python-3.12/pyproject.toml
@@ -9,51 +9,51 @@ dependencies = [
     # ROCm TensorFlow packages
     # https://rocm.docs.amd.com/projects/install-on-linux/en/latest/install/3rd-party/tensorflow-install.html#using-a-wheels-package
     "tensorflow-rocm @ https://repo.radeon.com/rocm/manylinux/rocm-rel-6.4/tensorflow_rocm-2.18.1-cp312-cp312-manylinux_2_28_x86_64.whl#sha256=814a5e4842b0c92d63c7a0bb4df0baf51ff2db8615535d83fe8958204b840598",
-    "tensorboard~=2.18.0",
+    "tensorboard~=2.18.0", # tensorflow-rocm==2.18.1 is available and tensorflow-rocm==2.18.1 depends on tensorboard>=2.18,<2.19
 
     # Datascience and useful extensions
     "boto3~=1.40.27",
     "kafka-python-ng~=2.2.3",
-    "matplotlib~=3.10.1",
+    "matplotlib~=3.10.6",
     "numpy~=2.0.2",
-    "pandas~=2.2.3",
-    "plotly~=6.0.0",
-    "scikit-learn~=1.6.1",
-    "scipy~=1.15.2",
-    "skl2onnx~=1.18.0",
+    "pandas~=2.3.2",
+    "plotly~=6.3.0",
+    "scikit-learn~=1.7.2",
+    "scipy~=1.16.1",
+    "skl2onnx~=1.19.1",
     # Required for skl2onnx, as upgraded version is not compatible with protobuf
     "onnxconverter-common~=1.13.0",
     "codeflare-sdk~=0.31.1",
     "feast~=0.53.0",
 
     # DB connectors
-    "pymongo~=4.11.2",
-    "psycopg~=3.2.5",
+    "pymongo~=4.14.1",
+    "psycopg~=3.2.10",
     "pyodbc~=5.2.0",
-    "mysql-connector-python~=9.3.0",
+    "mysql-connector-python~=9.4.0",
 
     # This is a comprehensive list of python dependencies that Elyra requires to execute Jupyter notebooks.
-    "ipykernel~=6.29.5",
-    "ipython~=9.0.1",
+    "ipykernel~=6.30.1",
+    "ipython~=9.5.0",
     "ipython-genutils~=0.2.0",
     "jinja2>=3.1.6",
     "jupyter-client~=8.6.3",
     "jupyter-core~=5.8.1",
     "markupsafe~=3.0.2",
-    "minio~=7.2.15",
+    "minio~=7.2.16",
     "nbclient~=0.10.2",
     "nbconvert~=7.16.6",
     "nbformat~=5.10.4",
     "papermill~=2.6.0",
-    "pyzmq~=26.2.1",
-    "prompt-toolkit~=3.0.50",
-    "requests~=2.32.3",
+    "pyzmq~=27.1.0",
+    "prompt-toolkit~=3.0.52",
+    "requests~=2.32.5",
     "tornado~=6.5.2",
     "traitlets~=5.14.3",
     "urllib3~=2.5.0",
 
     # Base packages
-    "setuptools==78.1.1",
+    "setuptools==80.9.0",
     "wheel==0.45.1",
 ]
 
