--- a/runtimes/datascience/ubi9-python-3.12/build-args/cpu.conf
+++ b/runtimes/datascience/ubi9-python-3.12/build-args/cpu.conf
@@ -1,4 +1,3 @@
-# Base Image   : RHEL 9.6 with Python 3.12
-# Architectures: linux/arm64, linux/ppc64le, linux/x86_64
-# Source       : https://quay.io/repository/aipcc/base-images/cpu
-BASE_IMAGE=quay.io/aipcc/base-images/cpu:3.0-1756380321
+# Base Image   : UBI 9 with Python 3.12
+# Architectures: linux/arm64, linux/ppc64le, linux/x86_64, linux/s360x
+BASE_IMAGE=registry.access.redhat.com/ubi9/python-312:latest
