--- a/jupyter/datascience/ubi9-python-3.12/pyproject.toml
+++ b/jupyter/datascience/ubi9-python-3.12/pyproject.toml
@@ -16,8 +16,11 @@ dependencies = [
     "scipy~=1.15.2",
     "skl2onnx~=1.18.0",
     "onnxconverter-common~=1.13.0", # Required for skl2onnx, as upgraded version is not compatible with protobuf
-    "codeflare-sdk~=0.30.0",
     "kubeflow-training==1.9.3",
+    "codeflare-sdk~=0.30.0; platform_machine != 's390x'",
+    "py-spy~=0.4.0; platform_machine != 's390x'",
+    "ray[data,default]~=2.47.1; platform_machine != 's390x'",
+    "pyarrow~=20.0.0; platform_machine != 's390x'",
 
     # DB connectors
     "pymongo~=4.11.2",
